--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,8 @@
     margin: auto;
     display: block;
     width: 100%;
-    max-width: 100px;
+    max-width: 100%;
+    height: auto;
     max-height: 100%;
 }
 
