--- a/css/styles.css
+++ b/css/styles.css
@@ -31,9 +31,9 @@
     margin: auto;
     display: block;
     width: 100%;
-    max-width: 100%;
+    max-width: 2000px;
     height: auto;
-    max-height: 100%;
+    max-height: 1000px;
 }
 
 .close {
